<resources>
    <string name="app_name">EVM</string>

    <!--<string name="url_price_websocket">ws://192.168.0.5:8080</string>-->
    <string name="url_price">52.79.242.112</string>
    <!--<string name="url_price">172.16.5.167</string>-->
    <!--<string name="url_price">192.168.0.5</string>-->
    <string name="port_price">8080</string>
    <string name="url_order">52.79.242.112</string>
    <!--<string name="url_order">172.16.6.7</string>-->
    <!--<string name="url_order">192.168.0.5</string>-->
    <string name="port_order">3000</string>

    <string name="url_block_info">https://etherscan.io/block</string>
    <string name="url_block_info_ropsten">https://ropsten.etherscan.io/block</string>
    <string name="url_tx_info">https://etherscan.io/tx</string>
    <string name="url_tx_info_ropsten">https://ropsten.etherscan.io/tx</string>

    <string name="price10000">₩ 11,000</string>
    <string name="price20000">₩ 22,000</string>
    <string name="price30000">₩ 33,000</string>
    <string name="price50000">₩ 55,000</string>
    <string name="price100000">₩ 110,000</string>

    <string name="value10000">11000</string>
    <string name="value20000">22000</string>
    <string name="value30000">33000</string>
    <string name="value50000">55000</string>
    <string name="value100000">110000</string>

    <string name="addressFieldHint">이더리움 주소</string>
    <string name="err_msg_address">올바른 이더리움 주소를 입력하세요.</string>
    <string name="err_msg_check_address">입력한 주소를 다시 확인하세요.</string>
    <string name="err_qr_msg_address">이더리움 주소가 아닙니다.</string>
    <string name="btAddressEnter">확  인</string>
    <string name="AddressSaveCheckMsg">주소를 저장할까요?</string>
    <string name="logo">Logo</string>
    <string name="action_showAddress">주소 보기</string>
    <string name="menu_text_action_account">Account</string>
    <string name="menu_text_action_account_change">Change</string>
    <string name="menu_text_action_ok">OK</string>

    <string name="title_main">Testnet - Ropsten</string>
    <string name="title_address">Account</string>
    <string name="title_address_change">Account change</string>
    <string name="title_activity_mk_wallet">MkWalletActivity</string>
    <string name="address_description">
        지갑 주소는 이더리움을 송금받기 위한 정보입니다.
        다른 사람에게 이더리움을 받으려면 지갑 주소를 알려주세요.
    </string>
    <string name="private_key_description">
        EVM에서는 사용자들의 정보를 수집하지 않습니다.
        이 화면을 지나면 다시는 확인할 수 없습니다.
        반드시 안전하게 보관하십시오.
        분실하거나 다른 사람이 알지 못하게 주의해야합니다.
        \n
        \n이 단어를 다른 지갑 프로그램에서 사용할 수 있습니다.
    </string>
    <string name="title_activity_manual">ManualActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string-array name="manual_msg">
        <item>EVM을 다운로드 받아주셔서 감사합니다!!!\nEVM은 번거로운 절차 없이 쉽게 이더리움을 구입할 수 있는 서비스입니다.</item>
        <item>KakaoPay를 이용해 이더리움을 구입해 보세요!\n\n※본 어플은 데모입니다. 실제 결제되지 않으며, 이더리움은 Ropsten 네트워크를 통해 송금됩니다.</item>
        <item>이더리움을 구입하기 위해서는 이더리움을 보관할 지갑이 필요합니다.\n사용하고 있는 이더리움 지갑이 있습니까?</item>
    </string-array>
    <string name="title_activity_account">AccountActivity</string>
    <string name="msg_history_looking">Looking for history</string>
    <string name="msg_history_no">No history</string>
    <string name="msg_history_no_more">No more history</string>
    
    <string name="card_purchase_amount">%1$s Ether</string>
    <string name="card_purchase">Buy</string>

    <string name="err_order_title">주문 실패</string>
    <string name="err_order_limit_exceeded">일일 구입 한도를 초과하였습니다.</string>

    <string name="alert_mnemonic_title">!!!경고!!!</string>
    <string name="alert_mnemonic_body">
        이 화면을 지나면 백업 단어를 두번 다시 확인할 수 없습니다.\n
        \n안전하게 보관하셨습니까?
    </string>

    <string name="item_title_transaction">Transaction</string>
    <string name="item_title_block">Block</string>

</resources>
